# python-books-api

./: README.md  main.py  models.py  pyproject.toml  schemas.py
routes/: author.py  book.py  borrow.py  genre.py  publisher.py
tests/: conftest.py  test_authors.py  test_book.py  test_books.py  test_borrow.py  test_genres.py  test_publishers.py
